# anime-metrics-pyspark

./: Makefile  README.md  pyproject.toml
notebook_processing/: genre_date_statistics.ipynb  users_club_extraction.ipynb
