[tool.poetry]
name = "ecommerce_behavior"
version = "0.1.0"
description = ""
authors = ["Vitor Plentz <vitor.plentz@elixirai.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
kaggle = "^1.5.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
